ugly but functional

--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -3,6 +3,9 @@
   margin: 10px;
   border: 1px solid black;
   padding: 10px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
 }
 
 .Main-add:hover {
