--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -14,6 +14,9 @@
   margin: 10px;
   border: 1px solid black;
   padding: 10px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
 }
 
 .Sidebar-add:hover {
